@@ -1,5 +1,6 @@
 [master]
     - Fix for bug #1276: OO styles do not consider editor fields anymore for sorting
+    - Fix for bug #1288: Emacs keybindings: Rebinding of C-f can now be configured
     - Antialiasing is now enabled and set to LCD
 2.11 beta 3
     - New MacOSX integration
